# tauri-calculo-rainha-nexus

./: LICENSE  README.md  package.json  pnpm-lock.yaml
src/: app.html  global.css
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src/components/: LinkTool.svelte  Links.svelte  Nevrura.svelte
src/routes/: +layout.svelte  +page.svelte
src/routes/Laje/: +page.svelte
src/services/: laje.service.ts  nevrura.service.ts
src/templates/: Border.svelte  Footer.svelte  Header.svelte
